--- a/css/style.css
+++ b/css/style.css
@@ -511,8 +511,12 @@ input[type="radio"].visually-hidden {
 }
 
 .map {
-	height: 473px;
-	overflow: hidden;
+  margin-bottom: -120px;
+}
+
+.map  img{
+	width: 100%;
+	height: 593px;
 }
 
 .filters {
@@ -915,7 +919,9 @@ footer {
 	display: flex;
 	justify-content: space-between;	
 	align-items: center;
-	padding: 25px 70px;
+	padding: 26px 70px;
+	background-color: #fff;
+	opacity: 0.9;
 }
 
 .hashtag,
