--- a/css/style.css
+++ b/css/style.css
@@ -86,9 +86,9 @@ input[type="radio"].visually-hidden {
 	position: absolute;
 	top: 0;
 	left: 50%;
-	margin-left: -70px;
 	width: 138px;
 	height: 70px;
+	transform: translate(-50%);
 	z-index: 1;
 }
 
@@ -149,7 +149,7 @@ input[type="radio"].visually-hidden {
 }
 
 .slogan img {
-	margin-top: -80px;
+	margin-top: -83px;
 	margin-bottom: -275px;
 	width: 100%;
 	height: auto;
