--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ input[type="radio"].visually-hidden {
 }
 
 .main-header {
-	padding: 0 70px;
+	padding: 0 6%;
 	position: relative;
 	background-color: #fff;
 }
@@ -146,20 +146,29 @@ input[type="radio"].visually-hidden {
 	position: relative;
 	height: 508px;
 	overflow: hidden;
+	background-image: url("../img/slogan-bg.jpg");
+	-webkit-background-size: cover;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: 0 -56px;
 }
 
-.slogan img {
-	margin-top: -83px;
-	margin-bottom: -275px;
-	width: 100%;
-	height: auto;
+.slogan-img {
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	width: 458px;
+	
 }
 
 .slogan .mask {
 	position: absolute;
 	bottom: 0;
+	left: 0;
+	right: 0;
 	margin: 0;
-	width: 100%;
+
 	height: 57px;
 }
 
@@ -242,9 +251,9 @@ input[type="radio"].visually-hidden {
 }
 
 .big-item img {
+	object-fit: cover;
 	width: calc(100% * 2 / 3);
-	height: auto;
-	margin: -72px 0;
+	height: 256px;
 }
 
 .item-text {
@@ -541,7 +550,7 @@ input[type="radio"].visually-hidden {
 }
 
 .filter {
-	padding: 27px 70px 6px;
+	padding: 27px 6% 6px;
 	display: flex;
 	color: #fff;
 	line-height: 21px;
@@ -722,7 +731,7 @@ input[type="radio"].visually-hidden {
 .sorting {
 	display: flex;
 	align-items: center;
-	padding: 24px 70px;
+	padding: 24px 6%;
 	border-bottom: 1px solid #e4e4e4;
 }
 
@@ -829,7 +838,7 @@ input[type="radio"].visually-hidden {
 .catalog-list li{
 	display: flex;
 	align-items: center;
-	padding: 25px 70px 31px;
+	padding: 25px 6% 31px;
 	border-bottom: 1px solid #e4e4e4;
 }
 
@@ -933,7 +942,7 @@ footer {
 	display: flex;
 	justify-content: space-between;	
 	align-items: center;
-	padding: 26px 70px;
+	padding: 26px 6%;
 	background-color: #fff;
 	opacity: 0.9;
 }
